test/tests/stages/8_loops/valid/extra_credit/switch_goto_mid_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[42]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  goto
  identifier(mid_case)
  ;
  switch
  (
  const int(4)
  )
  {
  case
  const int(4)
  :
  identifier(a)
  =
  const int(5)
  ;
  identifier(mid_case)
  :
  identifier(a)
  =
  identifier(a)
  +
  const int(1)
  ;
  return
  identifier(a)
  ;
  }
  return
  const int(100)
  ;
  }
