test/tests/stages/8_loops/invalid_semantics/extra_credit/undefined_label_in_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  switch
  (
  identifier(a)
  )
  {
  case
  const int(1)
  :
  goto
  identifier(foo)
  ;
  default
  :
  return
  const int(0)
  ;
  }
  return
  const int(0)
  ;
  }
